--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -23,10 +23,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    compile project(path: ':xlib')
+
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
 
+    compile files('libs/AMap_2DMap_V2.8.1_20160202.jar')
+    compile files('libs/AMap_Search_V3.2.1_20160308.jar')
+    compile files('libs/AMap_Location_V2.4.0_20160308.jar')
 
-    compile project(path: ':xlib')
 }
