--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
 
+    compile files('libs/umeng_social_sdk.jar')
+
     compile files('libs/AMap_2DMap_V2.8.1_20160202.jar')
     compile files('libs/AMap_Search_V3.2.1_20160308.jar')
     compile files('libs/AMap_Location_V2.4.0_20160308.jar')
