--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 
     compile files('libs/umeng_social_sdk.jar')
 
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+
     compile files('libs/AMap_2DMap_V2.8.1_20160202.jar')
     compile files('libs/AMap_Search_V3.2.1_20160308.jar')
     compile files('libs/AMap_Location_V2.4.0_20160308.jar')
